# ESP32_iot_plants

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/LED/: CMakeLists.txt  LED.c
components/LED/include/: LED.h
components/dht11/: dht11.c
components/dht11/include/: dht11.h
components/illuminance_adc/: CMakeLists.txt  illuminance_adc.c
components/illuminance_adc/include/: illuminance_adc.h
components/light/: CMakeLists.txt  light.c
components/light/include/: light.h
components/lvgl/: Kconfig
components/lvgl/demos/widgets/: lv_demo_widgets.c
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/src/: lv_conf_internal.h
components/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
components/lvgl/src/font/: br759_font_lcd_segment_30.c  lv_font.h  lv_font.mk
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: ili9341.c  ili9341.h
components/lvgl_esp32_drivers/lvgl_touch/: touch_driver.c  touch_driver.h  xpt2046.c  xpt2046.h
components/motor/: motor.c
components/motor/include/: motor.h
components/mqtt_ssl/: CMakeLists.txt  mqtt_ssl.c
components/mqtt_ssl/include/: mqtt_ssl.h
components/pump/: pump.c
components/pump/include/: pump.h
components/sd_fatfs_br759/: CMakeLists.txt  sd_fatfs_br759.c
components/sd_fatfs_br759/include/: sd_fatfs_br759.h
components/solid_humi_adc/: CMakeLists.txt  solid_humi_adc.c
components/solid_humi_adc/include/: solid_humi_adc.h
components/ui_display/: CMakeLists.txt  Meichan3.c  MingmingMeichan.c  entrepreneurLiu.c  ui_display.c
components/ui_display/include/: ui_display.h
components/wifi_connection/: CMakeLists.txt  wifi_connection.c
components/wifi_connection/include/: wifi_connection.h
main/: CMakeLists.txt  main.c
